--- a/addTeam.html
+++ b/addTeam.html
@@ -32,7 +32,7 @@
     </div>
     <div style="margin:20px; padding-left: 10px;">
         <button style="background-color: rgb(251, 205, 0);" id="addTeam">Add</button>
-        <button onclick="window.location.href='index.html'" style="background-color: rgb(156, 11, 11);">Cancel</button>
+        <button onclick="window.location.href='index.html'" style="background-color: rgb(156, 11, 11);">Home</button>
     
     </div>
    
