--- a/futureMatches.html
+++ b/futureMatches.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <button onclick="window.location.href='index.html'">Home</button>
-    <button onclick="goPastMatch()">Past games</button>
+    <button style="background-color: rgb(255, 211, 100);" onclick="goPastMatch()">Past games</button>
     <h1>Future Matches</h1>
     <div id="matches"></div>
 
