--- a/pastMatches.html
+++ b/pastMatches.html
@@ -32,7 +32,7 @@ border-radius: 5px;
 </head>
 <body>
     <button onclick="window.location.href='index.html'">Home</button>
-    <button style="background-color: green;" onclick="goFutureMatch()">Future games</button>
+    <button style="background-color: rgb(212, 126, 246);" onclick="goFutureMatch()">Future games</button>
 
     <h1>Last Matches</h1>
     <div id="matches" class="matches-container"></div>
