--- a/futureMatches.html
+++ b/futureMatches.html
@@ -36,7 +36,7 @@
     <button onclick="window.location.href='index.html'">Home</button>
     <button style="background-color: rgb(255, 211, 100);" onclick="goPastMatch()">Past games</button>
     <h1>Future Matches</h1>
-    <p>Only 2 Matches shown because life is short and so is my API call limit</p>
+    <p><em>Only 2 Matches shown because life is short and so is my API call limit</em></p>
     <div id="matches"></div>
 
     
